tests/rascal/negative/name_errors/L2/7_undecl-in-case2.ob
MODULE Bla;

VAR x: INTEGER;

BEGIN
  CASE x OF
   y: 
      x := 1
  END
END Bla.